added the structure and styling for the header/nav tag

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 :root {
   --bg: #F0BAE2;
   --primary: #F5B606;
   --tertiary: #250349;
   --clickedBtn: #AD914B;
   --modelBg: #F4F4F4;
+}
+.logo-btn {
+  width: 140px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.logo {
+  border: none;
+}
+
+.custom-nav {
+  background-color: var(--primary);
+  border-bottom: 2px solid #250349;
+}
+
+body {
+  font-family: 'VT323',
+      monospace;
+  background-color: var(--bg)!important;
+}
+.highscores{
+  font-size: 30px !important;
+  font-family: 'VT323', monospace;
+  color: var(--modelBg)!important;
+  position: absolute;
+  right: 20px;
+  top: 10px;
 }
