--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ body {
   border: var(--border);
 }
 
-.modal-btn{
+.custom-btn{
   background-color: var(--primary);
   border: var(--border);
   font-size: 1.2em!important;
@@ -86,3 +86,63 @@ body {
   font-size: 1.2em !important;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.welcome{
+  padding: 20px;
+  margin-top: 35px;
+}
+
+.enter-btn {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+}
+
+.enter-img {
+  height: 60px;
+}
+.enter-img:hover {
+  height: 55px;
+}
+
+.choose{
+  margin-top: 50px;
+  position: relative;
+  text-align: center;
+   font-size: 7rem;
+   
+}
+.choices{
+  position: fixed;
+    bottom: 70px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+
+}
+.choice-btn{
+    margin: 0 20px;
+    padding: 0 15px 0 15px;
+    height: 70px;
+    font-size: 4vw!important;
+    color: var(--modelBg);
+}
+.choice-btn:hover {
+  margin: 0 20px;
+  padding: 0 15px 0 15px;
+  height: 70px;
+  font-size: 4vw !important;
+  color: var(--modelBg);
+  background-color: var(--hover)!important;
+}
