finished styling the footer, i have positioned it top left of the screen as used it as a main menu button instead

--- a/src/App.css
+++ b/src/App.css
@@ -182,3 +182,14 @@ padding-bottom: 10px;
   padding-top: 20px;
   font-size: 60px;
 }
+
+.footer{
+  position: fixed;
+  top: 80px;
+  left: 20px;
+
+}
+.footer-btn{
+  background-color: var(--primary)!important;
+  font-family: inherit!important;
+}
