--- a/src/App.css
+++ b/src/App.css
@@ -25,46 +25,15 @@
   border-bottom: 2px solid #250349;
 }
 
-/*<<<<<<< feature/footer*/
 body {
-  font-family: 'VT323', monospace!important;
-  background-color: var(--bg)!important;
-}
-
-.highscores {
-
   font-family: 'VT323',
     monospace !important;
   background-color: var(--bg) !important;
 }
 
 .highscores {
-  font-family: 'VT323', monospace!important;
-  background-color: var(--bg)!important;
-}
-
-.highscores {
-
   font-size: 30px !important;
   font-family: 'VT323', monospace;
-  color: var(--tertiary) !important;
-  font-size: 30px !important;
-  font-family: 'VT323', monospace;
-  color: var(--tertiary) !important;
-  position: absolute;
-  right: 20px;
-  top: 7px;
-  background-color: rgb(255, 255, 255) !important;
-  border: var(--border);
-  border-style: ridge;
- 
-}
-
-/*>>>>>>> main*/
-.highscores:hover {
-  font-size: 30px !important;
-  font-family: 'VT323', monospace;
-  color: var(--tertiary)!important;
   color: var(--tertiary) !important;
   position: absolute;
   right: 20px;
@@ -77,10 +46,6 @@ body {
 .highscores:hover {
   font-size: 30px !important;
   font-family: 'VT323', monospace;
-  color: var(--tertiary) !important;
-  position: absolute;
-  right: 20px;
-  top: 7px;
   color: var(--tertiary) !important;
   position: absolute;
   right: 20px;
@@ -90,30 +55,10 @@ body {
   border-style: ridge;
 }
 
-/* eightball*/
-
-/* feature/footer*/
-
 .custom-modal-header {
   background-color: var(--modelBg) !important;
   border: var(--border);
-}
 
-/*main*/
-
-.custom-modal-header {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
-}
-
-.custom-modal-header{
-  background-color: var(--modelBg)!important;
-  border: var(--border);
-  
-
-.custom-modal-header {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
 }
 
 .h4 {
@@ -125,160 +70,25 @@ body {
   border: var(--border);
   max-height: 380px !important;
   min-height: 350px !important;
+
 }
-
-
-
-
-/*eightball*/
-
-/*>>>>>>> main*/
 
 .custom-modal-footer {
   background-color: var(--modelBg) !important;
   border: var(--border);
 }
 
-/*<<<<<<< eightball8/
-
-
-/*<<<<<<< feature/footer*/
-
-.custom-btn{
+.custom-btn {
   background-color: var(--primary);
   border: var(--border);
   font-size: 1.2em !important;
 }
-
-/*<<<<<<< eightball*/
-
-/*<<<<<<< feature/footer*/
-
-
-.modal-btn {
-  background-color: var(--primary);
-  border: var(--border);
-  font-size: 1.2em !important;
-}
-
-
-/*<<<<<<< eightball*/
-
-/*>>>>>>> main*/
 
 .modal-btn:hover {
   background-color: var(--hover);
   border: var(--border);
   font-size: 1.2em !important;
- feature/main-screen
 }
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.welcome{
-  padding: 20px;
-  margin-top: 35px;
-}
-
-.enter-btn {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  display: block;
-  margin: 0 auto;
-}
-
-.enter-img {
-  height: 60px;
-}
-
-
-
-.enter-img:hover {
-  height: 55px;
-}
-
-
-/* Use this class for all the page H1 to make them all the same for each component*/
-.header {
-  margin-top: 50px;
-  position: relative;
-  text-align: center;
-  font-size: 7rem;
-
-}
-
-.choices {
-  position: fixed;
-  bottom: 70px;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-
-}
-
-
-.choose{
-  margin-top: 50px;
-  position: relative;
-  text-align: center;
-   font-size: 7rem;
-   
-}
-.choices{
-  position: fixed;
-    bottom: 70px;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-
-}
-.choice-btn{
-    margin: 0 20px;
-    padding: 0 15px 0 15px;
-    height: 70px;
-    font-size: 4vw!important;
-    color: var(--modelBg);
-}
-.choice-btn:hover {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
-
-}
-
-.choice-btn:hover {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
-  }
-  
-  
-/*eightball*/
 
 .container {
   display: flex;
@@ -325,6 +135,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+
 }
 
 .choice-btn {
@@ -335,7 +146,6 @@ body {
   color: var(--modelBg);
 }
 
-/*main*/
 .choice-btn:hover {
   margin: 0 20px;
   padding: 0 15px 0 15px;
@@ -345,38 +155,45 @@ body {
   background-color: var(--hover) !important;
 }
 
-
-
-.center{
+.center {
   text-align: center;
 }
 
-.weapons{
+.weapons {
   height: 140px;
-  width:180px;
+  width: 180px;
   background-color: #f4f4f400;
   border: 0px;
-  
+
 }
 
-.weapon-choices{
-  height:inherit;
-  width:inherit;
+.weapon-choices {
+  height: inherit;
+  width: inherit;
 }
 
-
-.prompt{
+.prompt {
   padding: 0px;
   font-size: 40px;
 }
 
-
-
-.game-choices{
-padding-bottom: 10px;
+.game-choices {
+  padding-bottom: 10px;
 }
 
-.result{
+.result {
   padding-top: 20px;
   font-size: 60px;
+}
+
+.footer {
+  position: fixed;
+  top: 80px;
+  left: 20px;
+
+}
+
+.footer-btn {
+  background-color: var(--primary) !important;
+  font-family: inherit !important;
 }
