--- a/src/App.css
+++ b/src/App.css
@@ -1,555 +1,163 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-
 :root {
-  --bg: #F0BAE2;
-  --primary: #F5B606;
-  --hover: #e0a604;
-  --tertiary: #250349;
-  --clickedBtn: #AD914B;
-  --modelBg: #F4F4F4;
-  --border: 2px solid #250349;
+ --bg: #F0BAE2;
+ --primary: #F5B606;
+ --hover: #E0A604;
+ --tertiary: #250349;
+ --clickedBtn: #AD914B;
+ --modelBg: #F4F4F4;
+ --border: 2px solid #250349;
 }
-
 .logo-btn {
-  width: 140px;
-  border: none;
-  background-color: rgba(255, 255, 255, 0);
+ width: 140px;
+ border: none;
+ background-color: rgba(255, 255, 255, 0);
 }
-
 .logo {
-  border: none;
+ border: none;
 }
-
 .custom-nav {
-  background-color: var(--primary);
-  border-bottom: 2px solid #250349;
+ background-color: var(--primary);
+ border-bottom: 2px solid #250349;
 }
-
-/*<<<<<<< feature/footer*/
 body {
-<<<<<<< HEAD
-  font-family: 'VT323',
-<<<<<<< HEAD
- feature/main-screen
-      monospace!important;
-=======
-  font-family: 'VT323', monospace!important;
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-  background-color: var(--bg)!important;
+ font-family: 'VT323',
+  monospace !important;
+ background-color: var(--bg) !important;
 }
-
-<<<<<<< HEAD
-=======
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
 .highscores {
-
-  font-family: 'VT323',
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-    monospace !important;
-  background-color: var(--bg) !important;
+ font-size: 30px !important;
+ font-family: 'VT323', monospace;
+ color: var(--tertiary) !important;
+ position: absolute;
+ right: 20px;
+ top: 7px;
+ background-color: rgb(255, 255, 255) !important;
+ border: var(--border);
+ border-style: ridge;
 }
-
-.highscores {
-  font-family: 'VT323', monospace!important;
-  background-color: var(--bg)!important;
-}
-
-.highscores {
-
-  font-size: 30px !important;
-  font-family: 'VT323', monospace;
-  color: var(--tertiary) !important;
-  font-size: 30px !important;
-  font-family: 'VT323', monospace;
-  color: var(--tertiary) !important;
-<<<<<<< HEAD
-  position: absolute;
-  right: 20px;
-  top: 7px;
-  background-color: rgb(255, 255, 255) !important;
-  border: var(--border);
-  border-style: ridge;
- 
-}
-
-/*>>>>>>> main*/
 .highscores:hover {
-  font-size: 30px !important;
-  font-family: 'VT323', monospace;
-  color: var(--tertiary)!important;
-<<<<<<< HEAD
-=======
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
-  color: var(--tertiary) !important;
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-  position: absolute;
-  right: 20px;
-  top: 7px;
-  background-color: rgb(255, 255, 255) !important;
-  border: var(--border);
-  border-style: ridge;
+ font-size: 30px !important;
+ font-family: 'VT323', monospace;
+ color: var(--tertiary) !important;
+ position: absolute;
+ right: 20px;
+ top: 7px;
+ background-color: rgb(233, 233, 233) !important;
+ border: var(--border);
+ border-style: ridge;
 }
-
-.highscores:hover {
-  font-size: 30px !important;
-  font-family: 'VT323', monospace;
-  color: var(--tertiary) !important;
-  position: absolute;
-  right: 20px;
-  top: 7px;
-  color: var(--tertiary) !important;
-  position: absolute;
-  right: 20px;
-  top: 7px;
-  background-color: rgb(233, 233, 233) !important;
-  border: var(--border);
-  border-style: ridge;
-}
-
-<<<<<<< HEAD
-<<<<<<< HEAD
- feature/main-screen
-=======
-/* eightball*/
-
-/* feature/footer*/
-
 .custom-modal-header {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
+ background-color: var(--modelBg) !important;
+ border: var(--border);
 }
-
-/*main*/
-
-.custom-modal-header {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
-}
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-.custom-modal-header{
-  background-color: var(--modelBg)!important;
-  border: var(--border);
-  
-
-.custom-modal-header {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
-<<<<<<< HEAD
-
- main
-=======
-.custom-modal-header {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
-
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-}
-
 .h4 {
-  font-size: 2em !important;
+ font-size: 2em !important;
 }
-
 .custom-modal-body {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
-<<<<<<< HEAD
-<<<<<<< HEAD
- feature/main-screen
-  max-height: 300px!important;
-  min-height: 270px!important;
-
-=======
-  max-height: 380px !important;
-  min-height: 350px !important;
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
+ background-color: var(--modelBg) !important;
+ border: var(--border);
+ max-height: 380px !important;
+ min-height: 350px !important;
 }
-
-
-
-<<<<<<< HEAD
- main
-=======
-  max-height: 380px !important;
-  min-height: 350px !important;
-
-}
-
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
-
-/*eightball*/
-
-/*>>>>>>> main*/
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
 .custom-modal-footer {
-  background-color: var(--modelBg) !important;
-  border: var(--border);
+ background-color: var(--modelBg) !important;
+ border: var(--border);
 }
-
-<<<<<<< HEAD
-<<<<<<< HEAD
- feature/main-screen
-.custom-btn{
-=======
 .custom-btn {
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
-/*<<<<<<< eightball8/
-
-
-/*<<<<<<< feature/footer*/
-
-.custom-btn{
-  background-color: var(--primary);
-  border: var(--border);
-  font-size: 1.2em !important;
+ background-color: var(--primary);
+ border: var(--border);
+ font-size: 1.2em !important;
 }
-
-/*<<<<<<< eightball*/
-
-/*<<<<<<< feature/footer*/
-
-
-.modal-btn {
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-  background-color: var(--primary);
-  border: var(--border);
-  font-size: 1.2em !important;
-}
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-.modal-btn {
-  background-color: var(--primary);
-=======
 .modal-btn:hover {
-  background-color: var(--hover);
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-  border: var(--border);
-  font-size: 1.2em !important;
+ background-color: var(--hover);
+ border: var(--border);
+ font-size: 1.2em !important;
 }
-
-<<<<<<< HEAD
- main
-=======
-
-/*<<<<<<< eightball*/
-
-/*>>>>>>> main*/
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-.modal-btn:hover {
-  background-color: var(--hover);
-  border: var(--border);
-  font-size: 1.2em !important;
- feature/main-screen
-}
-
-=======
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
 }
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-.welcome{
-=======
 .welcome {
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-  padding: 20px;
-  margin-top: 35px;
+ padding: 20px;
+ margin-top: 35px;
 }
-
 .enter-btn {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  display: block;
-  margin: 0 auto;
+ border: none;
+ background-color: transparent;
+ cursor: pointer;
+ display: block;
+ margin: 0 auto;
 }
-
 .enter-img {
-  height: 60px;
+ height: 60px;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
-
-
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
 .enter-img:hover {
-  height: 55px;
+ height: 55px;
 }
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-
-/* Use this class for all the page H1 to make them all the same for each component*/
 .header {
-  margin-top: 50px;
-  position: relative;
-  text-align: center;
-  font-size: 7rem;
-
+ display: block;
+ margin-top: 50px;
+ text-align: center;
+ font-size: 7rem;
 }
-
 .choices {
-  position: fixed;
-  bottom: 70px;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-
+ position: fixed;
+ bottom: 70px;
+ left: 0;
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 20px;
 }
-
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-.choose{
-  margin-top: 50px;
-  position: relative;
-  text-align: center;
-   font-size: 7rem;
-   
-}
-.choices{
-  position: fixed;
-    bottom: 70px;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-
-}
-.choice-btn{
-    margin: 0 20px;
-    padding: 0 15px 0 15px;
-    height: 70px;
-    font-size: 4vw!important;
-    color: var(--modelBg);
-}
-=======
-.header {
-  display: block;
-  margin-top: 50px;
-  text-align: center;
-  font-size: 7rem;
-
-}
-
-.choices {
-  position: fixed;
-  bottom: 70px;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-
-}
-
 .choice-btn {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
+ margin: 0 20px;
+ padding: 0 15px 0 15px;
+ height: 70px;
+ font-size: 4vw !important;
+ color: var(--modelBg);
 }
-
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
 .choice-btn:hover {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
-<<<<<<< HEAD
-<<<<<<< HEAD
-  background-color: var(--hover)!important;
+ margin: 0 20px;
+ padding: 0 15px 0 15px;
+ height: 70px;
+ font-size: 4vw !important;
+ color: var(--modelBg);
+ background-color: var(--hover) !important;
 }
-
-}
- main
-=======
-  background-color: var(--hover) !important;
-}
-
-=======
-
-}
-
-.choice-btn:hover {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
-  }
-  
-  
-/*eightball*/
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.welcome {
-  padding: 20px;
-  margin-top: 35px;
-}
-
-.enter-btn {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  display: block;
-  margin: 0 auto;
-}
-
-.enter-img {
-  height: 60px;
-}
-
-.enter-img:hover {
-  height: 55px;
-}
-
-.header {
-  display: block;
-  margin-top: 50px;
-  text-align: center;
-  font-size: 7rem;
-
-}
-
-.choices {
-  position: fixed;
-  bottom: 70px;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-}
-
-.choice-btn {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
-}
-
-/*main*/
-.choice-btn:hover {
-  margin: 0 20px;
-  padding: 0 15px 0 15px;
-  height: 70px;
-  font-size: 4vw !important;
-  color: var(--modelBg);
-  background-color: var(--hover) !important;
-}
-
-
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
 .center{
-  text-align: center;
+ text-align: center;
 }
-
 .weapons{
-  height: 140px;
-  width:180px;
-  background-color: #f4f4f400;
-  border: 0px;
-  
+ height: 140px;
+ width:180px;
+ background-color: #f4f4f400;
+ border: 0px;
 }
-<<<<<<< HEAD
-=======
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
 .weapon-choices{
-  height:inherit;
-  width:inherit;
+ height:inherit;
+ width:inherit;
 }
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
 .prompt{
-  padding: 0px;
-  font-size: 40px;
+ padding: 0px;
+ font-size: 40px;
 }
-
-<<<<<<< HEAD
 .game-choices{
 padding-bottom: 10px;
 }
-=======
-
-
-.game-choices{
-padding-bottom: 10px;
-}
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
 .result{
-  padding-top: 20px;
-  font-size: 60px;
+ padding-top: 20px;
+ font-size: 60px;
 }
-
-.footer{
-  position: fixed;
-  top: 80px;
-  left: 20px;
-
+.footer {
+ position: fixed;
+ top: 80px;
+ left: 20px;
 }
-<<<<<<< HEAD
-=======
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
-.footer-btn{
-  background-color: var(--primary)!important;
-  font-family: inherit!important;
+.footer-btn {
+ background-color: var(--primary) !important;
+ font-family: inherit !important;
 }
-<<<<<<< HEAD
->>>>>>> e3f492cf808416def6ddde000e6d70b1d305fa23
-=======
-
->>>>>>> 85b4d85cba2209f3616e0a048dbfffd50e074cd0
